# flo-blog-rust

./: .gitignore  Cargo.toml  Procfile
.circleci/: config.yml
src/: lib.rs  lib.src.rs  main.rs
src/handlers/: home_handler.rs  mod.rs
static/css/: index.css
tailwind/: package.json
templates/: base.html  home.html
