[package]
name = "flo-blog-rust"
version = "0.0.1"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
actix-web = "4"
env_logger = "0.10.0"
lazy_static = "1.4.0"
actix-files = "0.6.1"
pulldown-cmark = { version = "0.9.1", default-features = false }
ignore = "0.4"
toml = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
